[package]
name = "bankstown-lv2"
authors = ["James Calligeros"]
license = "MIT"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
biquad = "0.4.2"
lv2 = "0.6.0"

[lib]
crate-type = ["cdylib"]
name = "bankstown"
