[package]
name = "bankstown-lv2"
authors = ["James Calligeros"]
description = "A barebones, fast LV2 bass enhancement plugin"
license = "MIT"
repository = "https://github.com/chadmed/bankstown"
version = "1.0.1"
edition = "2021"
keywords = ["lv2", "bass", "audio", "plugin"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
biquad = "0.4.2"
lv2 = "0.6.0"

[lib]
crate-type = ["cdylib"]
name = "bankstown"
